--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -1,8 +1,5 @@
 <!-- # templates/chat_widget.html -->
 
-
-
-<!DOCTYPE html>
 <html>
 <head>
     <title>Chat Widget</title>
@@ -177,5 +174,4 @@ const chatSocket = new WebSocket(
     <input type="text" id="message" placeholder="Type your message here...">
     <button onclick="sendMessage()">Send</button>
 </body>
-</html>
- -->
+</html>-->
