--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -147,7 +147,7 @@
             displayMessage(message, 'outgoing');
         }
 
-        function displayIncomingMessage(text) {
+        function displayMessage(text) {
     const chatMessages = document.getElementById('chat-messages');
     const messageElement = document.createElement('div');
     messageElement.className = 'message incoming-message';
