--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -152,6 +152,8 @@
     </style>
 </head>
 <body>
+    <div id="dashboard">
+        
     <div id="left-panel">
         <h3>Pages</h3>
         <ul id="pages-list"></ul>
@@ -168,6 +170,8 @@
             <input type="text" id="message" placeholder="Type your message here...">
             <button onclick="sendMessage()">Send</button>
         </div>
+    </div>
+        
     </div>
 
     <script>
