--- a/fb_yomamabot/templates/chat_widget.html
+++ b/fb_yomamabot/templates/chat_widget.html
@@ -197,23 +197,23 @@
     <script>
 
         //*********left panel
-// document.addEventListener('DOMContentLoaded', function() {
-//     fetch('/fetch_pages/')
-//         .then(response => response.json())
-//         .then(data => {
-//             if (data.pages) {
-//                 const pagesList = document.getElementById('pages-list');
-//                 data.pages.forEach(page => {
-//                     const listItem = document.createElement('li');
-//                     listItem.innerHTML = `<strong>${page.name}</strong> <span>(ID: ${page.id})</span>`;
-//                     pagesList.appendChild(listItem);
-//                 });
-//             } else {
-//                 console.error('Failed to fetch pages');
-//             }
-//         })
-//         .catch(error => console.error('Error fetching pages:', error));
-// });
+document.addEventListener('DOMContentLoaded', function() {
+    fetch('/fetch_pages/')
+        .then(response => response.json())
+        .then(data => {
+            if (data.pages) {
+                const pagesList = document.getElementById('pages-list');
+                data.pages.forEach(page => {
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `<strong>${page.name}</strong> <span>(ID: ${page.id})</span>`;
+                    pagesList.appendChild(listItem);
+                });
+            } else {
+                console.error('Failed to fetch pages');
+            }
+        })
+        .catch(error => console.error('Error fetching pages:', error));
+});
 
 
   async function loadUsers(pageId, accessToken) {
